Package section commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tufan Convention Center</title>
 
-   
+    <!-- Font awsome link  -->
+    <script src="https://kit.fontawesome.com/73d3c82a38.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,7 +52,7 @@
                 </div>
             </nav>
         </navbar>
-        <!-- slider Part  -->
+        <!-- slider Section  -->
         <section>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -66,25 +67,25 @@
                     <div class="carousel-item active">
                         <img src="images/banner.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>YOU CAN ARRANGE YOUR EVENT HERE</h1>
-                            <p>Every event is importent for us. We always try to make our customer happy</p>
-                            <a href="" class="px-5 py-3 btn my-btn">BOOK NOW </a>
+                            <h1 class="fw-bold">YOU CAN ARRANGE <br> YOUR EVENT HERE</h1>
+                            <p>Every event is importent for us. We always try to make <br> our customer happy</p>
+                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/banner.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>BEST WAY TO DECORATE YOUR EVENT</h1>
-                            <p>Here we ensure the best decoration of town. We have more then 500 review with 5 star. So you can truely come to us for your upcoming event</p>
-                            <a href="" class="px-5 py-3 btn my-btn">BOOK NOW </a>
+                            <h1 class="fw-bold">BEST WAY TO DECORATE <br> YOUR EVENT</h1>
+                            <p>Here we ensure the best decoration of town. <br> We have more then 500 review with 5 star. <br> So you can truely come to us for your upcoming event</p>
+                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/banner.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>THE BEST SERVISES OF THE TOWN</h1>
-                            <p>We provide the best services in this city. You can also stay in our place for your event</p>
-                            <a href="" class="px-5 py-3 btn my-btn">BOOK NOW </a>
+                            <h1 class="fw-bold">THE BEST SERVISES <br> OF THE TOWN</h1>
+                            <p>We provide the best services in this city. <br> You can also stay in our place for <br> your event</p>
+                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +103,77 @@
         </section>
     </header>
     <main>
-
+        <!-- Precious moment section  -->
+        <section class="container py-5 my-5">
+            <div class="row align-items-center g-4">
+                <div class="col-lg-5 pe-5">
+                    <img src="images/wedding.png" alt="">
+                </div>
+                <div class="col-lg-7 p-5">
+                    <h1 class="fw-bold">Every moment is Precious for us</h1>
+                    <p>We make sure your every moment very joyfull and precious. We provide every single customer our best survises. People can also stay here for their event. We have also 400 hotel rooms with five star facilities. We feel so much proud to provide the best servises in the city of Dhaka.</p>
+                    <a href="" class="px-5 py-3 btn my-btn fw-bold">Explore our album <i class="fas fa-arrow-right ms-2"></i></a>
+                </div>
+            </div>
+        </section>
+        <!-- Our packege Section  -->
+        <section class="container">
+            <h1 class="fw-bold d-flex align-items-center justify-content-center">Our Pacage</h1>
+            <div class="row pt-5">
+                <div class="col-lg-3 p-4">
+                    <h1 class="fw-bold">$300</h1>
+                    <h2 class="fw-bold">Business fair</h2>
+                    <div>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>limited space access</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Secuirty facility</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>event support</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Per day bill</p>
+                    </div>
+                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                </div>
+                <div class="col-lg-3 p-4">
+                    <h1 class="fw-bold">$500</h1>
+                    <h2 class="fw-bold">Weading Basic</h2>
+                    <div>
+                        <p>For weddings with basic plan and limited item.</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Full space access</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Food arrangement</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Mangement support</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Billed as shift</p>
+                    </div>
+                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                </div>
+                <div class="col-lg-3 p-4">
+                    <h1 class="fw-bold">$800</h1>
+                    <h2 class="fw-bold">Wedding plus</h2>
+                    <div>
+                        <p>For most weddings with premium plans.<p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Full space access</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Dedicated team</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Buffet food</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>premium Decoration</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Pay as plan</p>
+                    </div>
+                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                </div>
+                <div class="col-lg-3 p-4">
+                    <h1 class="fw-bold">$300</h1>
+                    <h2 class="fw-bold">Business fair</h2>
+                    <div>
+                        <p>For most businesses event like book fair, craft fair.</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>limited space access</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Secuirty facility</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>event support</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Per day bill</p>
+                    </div>
+                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
