our packages second commit

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         </section>
         <!-- Our packege Section  -->
         <section class="container">
-            <h1 class="fw-bold d-flex align-items-center justify-content-center">Our Pacage</h1>
-            <div class="row pt-5">
-                <div class="col-lg-3 p-4">
+            <h1 class="fw-bold d-flex align-items-center justify-content-center packages">Our Pacages</h1>
+            <div class="row gy-5 py-5">
+                <div class="col-lg-3 col-md-6 p-4">
                     <h1 class="fw-bold">$300</h1>
                     <h2 class="fw-bold">Business fair</h2>
                     <div>
@@ -133,7 +133,7 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 p-4">
+                <div class="col-lg-3 col-md-6 p-4">
                     <h1 class="fw-bold">$500</h1>
                     <h2 class="fw-bold">Weading Basic</h2>
                     <div>
@@ -146,7 +146,7 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 p-4">
+                <div class="col-lg-3 col-md-6 p-4 weadding-plus">
                     <h1 class="fw-bold">$800</h1>
                     <h2 class="fw-bold">Wedding plus</h2>
                     <div>
@@ -159,16 +159,17 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 p-4">
-                    <h1 class="fw-bold">$300</h1>
-                    <h2 class="fw-bold">Business fair</h2>
+                <div class="col-lg-3 col-md-6 p-4">
+                    <h1 class="fw-bold">$1200</h1>
+                    <h2 class="fw-bold">Corporate event</h2>
                     <div>
-                        <p>For most businesses event like book fair, craft fair.</p>
-                        <p><i class="far check me-2 fa-check-circle"></i>limited space access</p>
-                        <p><i class="far check me-2 fa-check-circle"></i>Secuirty facility</p>
-                        <p><i class="far check me-2 fa-check-circle"></i>event support</p>
-                        <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
-                        <p><i class="far check me-2 fa-check-circle"></i>Per day bill</p>
+                        <p>For most corporate business 
+                            events.</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Full space access</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Dedicated team</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Buffet food</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>Premium Decoration</p>
+                        <p><i class="far check me-2 fa-check-circle"></i>pay as plan</p>
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
