--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-     <!-- Basic CSS Link  -->
-     <link rel="stylesheet" href="style.css">
+    <!-- Basic CSS Link  -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -76,7 +76,8 @@
                         <img src="images/banner.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bold">BEST WAY TO DECORATE <br> YOUR EVENT</h1>
-                            <p>Here we ensure the best decoration of town. <br> We have more then 500 review with 5 star. <br> So you can truely come to us for your upcoming event</p>
+                            <p>Here we ensure the best decoration of town. <br> We have more then 500 review with 5
+                                star. <br> So you can truely come to us for your upcoming event</p>
                             <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
@@ -84,7 +85,8 @@
                         <img src="images/banner.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bold">THE BEST SERVISES <br> OF THE TOWN</h1>
-                            <p>We provide the best services in this city. <br> You can also stay in our place for <br> your event</p>
+                            <p>We provide the best services in this city. <br> You can also stay in our place for <br>
+                                your event</p>
                             <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
@@ -111,8 +113,11 @@
                 </div>
                 <div class="col-lg-7 p-5">
                     <h1 class="fw-bold">Every moment is Precious for us</h1>
-                    <p>We make sure your every moment very joyfull and precious. We provide every single customer our best survises. People can also stay here for their event. We have also 400 hotel rooms with five star facilities. We feel so much proud to provide the best servises in the city of Dhaka.</p>
-                    <a href="" class="px-5 py-3 btn my-btn fw-bold">Explore our album <i class="fas fa-arrow-right ms-2"></i></a>
+                    <p>We make sure your every moment very joyfull and precious. We provide every single customer our
+                        best survises. People can also stay here for their event. We have also 400 hotel rooms with five
+                        star facilities. We feel so much proud to provide the best servises in the city of Dhaka.</p>
+                    <a href="" class="px-5 py-3 btn my-btn fw-bold">Explore our album <i
+                            class="fas fa-arrow-right ms-2"></i></a>
                 </div>
             </div>
         </section>
@@ -146,11 +151,15 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 col-md-6 p-4 weadding-plus">
+                <div class="col-lg-3 col-md-6 p-4 weadding-plus position-relative">
                     <h1 class="fw-bold">$800</h1>
                     <h2 class="fw-bold">Wedding plus</h2>
                     <div>
-                        <p>For most weddings with premium plans.<p>
+                        <span class="position-absolute top-0 end-0 translate-middle badge rounded-pill bg-danger">
+                            HOT
+                        </span>
+                        <p>For most weddings with premium plans.
+                        <p>
                         <p><i class="far check me-2 fa-check-circle"></i>Full space access</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Dedicated team</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Buffet food</p>
@@ -163,7 +172,7 @@
                     <h1 class="fw-bold">$1200</h1>
                     <h2 class="fw-bold">Corporate event</h2>
                     <div>
-                        <p>For most corporate business 
+                        <p>For most corporate business
                             events.</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Full space access</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Dedicated team</p>
@@ -172,6 +181,127 @@
                         <p><i class="far check me-2 fa-check-circle"></i>pay as plan</p>
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- happy clients Sectiopn  -->
+        <section class="container">
+            <h1 class="text-center fw-bold p-5">Happy Clients says</h1>
+            <div class="row gx-5 m-5">
+                <div class="col-lg-4 text-center ">
+                    <div class="rounded shadow-lg p-5 px-3">
+                        <p>The servises of the company is too good. I use there servises so many times. Their commitment
+                            to work impress me so well.</p>
+                        <img class="rounded-circle mb-2" src="images/person 1.png" alt="">
+                        <p class="fw-bold">Regina Miles</p>
+                        <p>Banker</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <div class="rounded shadow-lg p-5 px-3">
+                        <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.</p>
+                        <img class="rounded-circle mb-2" src="images/person 2.png" alt="">
+                        <p class="fw-bold">Jone Drake</p>
+                        <p>Business Man</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <div class="rounded shadow-lg p-5 px-3">
+                        <p>I an so much setesfide with their survises. Hope you guys will have a great future in your
+                            business</p>
+                        <img class="rounded-circle mb-2" src="images/person 3.png" alt="">
+                        <p class="fw-bold">Regina Miles</p>
+                        <p>Doctor</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/people.png" alt="">
                 </div>
             </div>
         </section>
