--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
             <div class="row gx-5 m-5">
                 <div class="col-lg-4 text-center ">
                     <div class="rounded shadow-lg p-5 px-3">
-                        <p>The servises of the company is too good. I use there servises so many times. Their commitment
-                            to work impress me so well.</p>
+                        <p>The servises of the company is too good. I use there servises so many times.</p>
                         <img class="rounded-circle mb-2" src="images/person 1.png" alt="">
                         <p class="fw-bold">Regina Miles</p>
                         <p>Banker</p>
@@ -218,8 +217,10 @@
                 </div>
             </div>
         </section>
+        <!-- Frequently Asked Questions Section  -->
         <section class="container">
-            <div class="row">
+            <h1 class="text-center fw-bold p-5">Frequently Asked Questions</h1>
+            <div class="row align-items-center m-5">
                 <div class="col-lg-6">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
@@ -242,13 +243,13 @@
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
+                            <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    data-bs-target="#four" aria-expanded="false" aria-controls="four">
                                     Accordion Item #2
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            <div id="four" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the second item's accordion body.</strong> It is hidden by default,
