Commit before footer section

--- a/index.html
+++ b/index.html
@@ -227,18 +227,13 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    What’s the difference between event design and event planning? 
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    Event design and event planning have some difference. We provite both of the services to our customers. If you hire us as a event designer, we will design all the entair things related to your event. And if you hair us as event planner, we will just provite you a plan about the event. Like how the event will going on.
                                 </div>
                             </div>
                         </div>
@@ -246,18 +241,13 @@
                             <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#four" aria-expanded="false" aria-controls="four">
-                                    Accordion Item #2
+                                    How early do we need to start planning an event?
                                 </button>
                             </h2>
                             <div id="four" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    Planning an event can take from weeks to months, it really depends on the size and the details that the event involves. Having enough time allows you to comfortably cover different areas and prepare yourself for potential scenarios that might happen so you can consider various options prior the date. You always need more time than you think!
                                 </div>
                             </div>
                         </div>
@@ -265,18 +255,13 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                                    What is your refund and cancellation policy?
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    If the return is caused by the consumer, consumer should be responsible for the shipping fee. The specific fee should be based on the express company you choose. If due to our reasons, the goods received are damaged or not correct, and the consumer is not required to bear the shipping fee for this reason.
                                 </div>
                             </div>
                         </div>
@@ -284,18 +269,15 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                                    How do you keep budgets on track?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    Use the right budgeting tool for you and your group. Using an Excel spreadsheet or Google Sheets that is shareable, changeable, and easy to keep up to date is crucial for budget management. Make sure to use headings and a format that is clear and easy to understand, giving access for editing only to those who need it. There are also some great event budgeting tools you can find on-line, but make sure they can be manipulated to meet your needs.
+Communicate the state of the budget to your team. This is critical for every event team so that each committee head will know exactly how much money they have to work with. As the event planner, communicate 5 to 10% less of the budgeted amount to make up for any overages that may come up.
+Update the budget regularly. Your nice and neat preliminary budget will be useless unless it is kept up-to-date. Update the budget maybe weekly at first, but expect daily budget work as the event draws closer.
                                 </div>
                             </div>
                         </div>
@@ -308,7 +290,14 @@
         </section>
     </main>
     <footer>
+        <div class="row">
+            <div class="col-lg-6">
 
+            </div>
+            <div class="col-lg-6">
+
+            </div>
+        </div>
     </footer>
 
 
