footer section commit

--- a/index.html
+++ b/index.html
@@ -289,13 +289,36 @@ Update the budget regularly. Your nice and neat preliminary budget will be usele
             </div>
         </section>
     </main>
-    <footer>
-        <div class="row">
-            <div class="col-lg-6">
-
+    <!-- Footer Section  -->
+    <footer class="mt-5">
+        <div class="row bg-black text-light p-5 d-flex align-items-center ms-0 justify-content-between">
+            <div class="col-lg-6 py-5">
+                <p>© 2022 bike. All rights reserved</p>
             </div>
-            <div class="col-lg-6">
-
+            <div class="col-lg-6 ">
+                <h3 class="pb-3">Get the App</h3>
+                <div>
+                <button class="btn btn-dark px-4 d-flex align-items-center">
+                    <div>
+                        <i class="fs-1 me-4 fab fa-apple"></i>
+                    </div>
+                    <div>
+                        <small>Download on the</small>
+                        <h5>App Store</h5>
+                    </div>
+                </button>
+                </div>
+                <div>
+                <button class="btn btn-dark px-4 my-3 d-flex align-items-center justify-content-center">
+                    <div>
+                        <i class="fs-1 me-3 fab fa-google-play"></i>
+                    </div>
+                    <div>
+                        <small>GET IT ON</small>
+                        <h5>Google Play</h5>
+                    </div>
+                </button>
+                </div>
             </div>
         </div>
     </footer>
