--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <section class="container py-5 my-5">
             <div class="row align-items-center g-4">
                 <div class="col-lg-5 pe-5">
-                    <img src="images/wedding.png" alt="">
+                    <img class="img-fluid" src="images/wedding.png" alt="">
                 </div>
                 <div class="col-lg-7 p-5">
                     <h1 class="fw-bold">Every moment is Precious for us</h1>
@@ -125,7 +125,7 @@
         <section class="container">
             <h1 class="fw-bold d-flex align-items-center justify-content-center packages">Our Pacages</h1>
             <div class="row gy-5 py-5">
-                <div class="col-lg-3 col-md-6 p-4">
+                <div class="col-lg-3 col-md-6 p-5">
                     <h1 class="fw-bold">$300</h1>
                     <h2 class="fw-bold">Business fair</h2>
                     <div>
@@ -138,7 +138,7 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 col-md-6 p-4">
+                <div class="col-lg-3 col-md-6 p-5">
                     <h1 class="fw-bold">$500</h1>
                     <h2 class="fw-bold">Weading Basic</h2>
                     <div>
@@ -151,7 +151,7 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 col-md-6 p-4 weadding-plus position-relative">
+                <div class="col-lg-3 col-md-6 p-5 weadding-plus position-relative">
                     <h1 class="fw-bold">$800</h1>
                     <h2 class="fw-bold">Wedding plus</h2>
                     <div>
@@ -168,7 +168,7 @@
                     </div>
                     <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
-                <div class="col-lg-3 col-md-6 p-4">
+                <div class="col-lg-3 col-md-6 p-5">
                     <h1 class="fw-bold">$1200</h1>
                     <h2 class="fw-bold">Corporate event</h2>
                     <div>
@@ -189,7 +189,7 @@
         <section class="container">
             <h1 class="text-center fw-bold p-5">Happy Clients says</h1>
             <div class="row gx-5 m-5">
-                <div class="col-lg-4 text-center ">
+                <div class="col-lg-4 text-center p-4">
                     <div class="rounded shadow-lg p-5 px-3">
                         <p>The servises of the company is too good. I use there servises so many times.</p>
                         <img class="rounded-circle mb-2" src="images/person 1.png" alt="">
@@ -197,7 +197,7 @@
                         <p>Banker</p>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 text-center p-4">
                     <div class="rounded shadow-lg p-5 px-3">
                         <p>Slate helps you see how many more days you need to work to reach your financial goal for the
                             month and year.</p>
@@ -206,7 +206,7 @@
                         <p>Business Man</p>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 text-center p-4">
                     <div class="rounded shadow-lg p-5 px-3">
                         <p>I an so much setesfide with their survises. Hope you guys will have a great future in your
                             business</p>
@@ -221,7 +221,7 @@
         <section class="container">
             <h1 class="text-center fw-bold p-5">Frequently Asked Questions</h1>
             <div class="row align-items-center m-5">
-                <div class="col-lg-6">
+                <div class="col-lg-6 p-4">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
@@ -283,19 +283,19 @@ Update the budget regularly. Your nice and neat preliminary budget will be usele
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <img src="images/people.png" alt="">
+                <div class="col-lg-6 p-4">
+                    <img class="img-fluid" src="images/people.png" alt="">
                 </div>
             </div>
         </section>
     </main>
     <!-- Footer Section  -->
-    <footer class="mt-5">
+    <footer class="container-fluid mt-5">
         <div class="row bg-black text-light p-5 d-flex align-items-center ms-0 justify-content-between">
-            <div class="col-lg-6 py-5">
+            <div class="col-lg-6 p-4 py-5">
                 <p>© 2022 bike. All rights reserved</p>
             </div>
-            <div class="col-lg-6 ">
+            <div class="col-lg-6 p-4 ">
                 <h3 class="pb-3">Get the App</h3>
                 <div>
                 <button class="btn btn-dark px-4 d-flex align-items-center">
@@ -322,8 +322,6 @@ Update the budget regularly. Your nice and neat preliminary budget will be usele
             </div>
         </div>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
