--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <header>
             <!-- Navbar Section  -->
-            <nav class="navbar py-3 navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar fixed-top py-3 navbar-expand-lg navbar-light bg-light">
                 <div class="container">
                     <div>
                         <a class="navbar-brand fw-bold" href="#">Tufan Convention Center</a>
