final commit of tufan company

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <section class="container">
                 <h1 class="fw-bold d-flex align-items-center justify-content-center packages">Our Pacages</h1>
                 <div class="row gy-5 py-5">
-                    <div class="col-lg-3 col-md-6 p-5">
+                    <div class="col-lg-3 col-md-6 px-3 py-5">
                         <h1 class="fw-bold">$300</h1>
                         <h2 class="fw-bold">Business fair</h2>
                         <div>
@@ -151,9 +151,9 @@
                             <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
                             <p><i class="far check me-2 fa-check-circle"></i>Per day bill</p>
                         </div>
-                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn d-block fw-bold">Choose plan</a>
                     </div>
-                    <div class="col-lg-3 col-md-6 p-5">
+                    <div class="col-lg-3 col-md-6 px-3 py-5">
                         <h1 class="fw-bold">$500</h1>
                         <h2 class="fw-bold">Weading Basic</h2>
                         <div>
@@ -164,9 +164,9 @@
                             <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
                             <p><i class="far check me-2 fa-check-circle"></i>Billed as shift</p>
                         </div>
-                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn d-block fw-bold">Choose plan</a>
                     </div>
-                    <div class="col-lg-3 col-md-6 p-5 weadding-plus position-relative">
+                    <div class="col-lg-3 col-md-6 px-3 py-5 weadding-plus position-relative">
                         <h1 class="fw-bold">$800</h1>
                         <h2 class="fw-bold">Wedding plus</h2>
                         <div>
@@ -181,9 +181,9 @@
                             <p><i class="far check me-2 fa-check-circle"></i>premium Decoration</p>
                             <p><i class="far check me-2 fa-check-circle"></i>Pay as plan</p>
                         </div>
-                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn d-block fw-bold">Choose plan</a>
                     </div>
-                    <div class="col-lg-3 col-md-6 p-5">
+                    <div class="col-lg-3 col-md-6 px-3 py-5">
                         <h1 class="fw-bold">$1200</h1>
                         <h2 class="fw-bold">Corporate event</h2>
                         <div>
@@ -194,7 +194,7 @@
                             <p><i class="far check me-2 fa-check-circle"></i>Premium Decoration</p>
                             <p><i class="far check me-2 fa-check-circle"></i>pay as plan</p>
                         </div>
-                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                        <a href="https://www.facebook.com/DiccBD/photos" target="_blank" class="btn-redius ms-2 px-5 py-2 btn d-block fw-bold">Choose plan</a>
                     </div>
                 </div>
             </section>
