--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </nav>
             <!-- slider Section  -->
-            <section>
+            <section class="slider">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -56,7 +56,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="images/img2.jpg" class="d-block w-100" alt="..." />
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-block">
                                 <h1 class="fw-bold">
                                     YOU CAN ARRANGE <br />
                                     YOUR EVENT HERE
@@ -70,7 +70,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="images/img3.jpg" class="d-block w-100" alt="..." />
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-block">
                                 <h1 class="fw-bold">
                                     BEST WAY TO DECORATE <br />
                                     YOUR EVENT
@@ -85,7 +85,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="images/banner.png" class="d-block w-100" alt="..." />
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-block">
                                 <h1 class="fw-bold">
                                     THE BEST SERVISES <br />
                                     OF THE TOWN
